changed timezone from UTC to CET and changed weather timer from local variable to last inserted measurement